<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:id="@+id/wifi_card_view"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="26dp"
        android:layout_height="wrap_content"
        tools:context=".DisplayScreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/labels" />

            <TextView
                android:id="@+id/wifi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name"
                style="@style/freeText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/labels" />

            <TextView
                android:id="@+id/wifi_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_name"
                style="@style/freeText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                style="@style/labels" />

            <TextView
                android:id="@+id/wifi_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/freeText"
                android:text="@string/wifi_strength" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capabilities"
                style="@style/labels" />

            <TextView
                android:id="@+id/wifi_capabilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/freeText"
                android:text="@string/wifi_capabilities" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue_name"
                style="@style/labels" />

            <TextView
                android:id="@+id/wifi_venueName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue_name"
                style="@style/freeText" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_wifi_info"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/wifi_info" />
    </LinearLayout>
</androidx.cardview.widget.CardView>